{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 11,
  "lineage": "f78e1eb7-2530-646e-9b27-d3e5b4f9785d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d176f79571d18a8f",
            "arn": "arn:aws:ec2:ap-south-1:462397577780:instance/i-0cbae6ad237f6cbfb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbae6ad237f6cbfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a6c884151fa5e0bb"
              }
            ],
            "primary_network_interface_id": "eni-0a6c884151fa5e0bb",
            "private_dns": "ip-10-0-1-192.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_ip": "15.207.85.59",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00bc37425eafb93f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4fab59c3c2ce0cd",
            "tags": {
              "Name": "Terraform-Web-Server"
            },
            "tags_all": {
              "Name": "Terraform-Web-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0947ef0d845dad549"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "id": "i-0cbae6ad237f6cbfb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:462397577780:internet-gateway/igw-059a913431981bc66",
            "id": "igw-059a913431981bc66",
            "owner_id": "462397577780",
            "region": "ap-south-1",
            "vpc_id": "vpc-03dbc9c0bbc239d47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059a913431981bc66",
            "id": "r-rtb-02f43ea9aa9dbc5aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-02f43ea9aa9dbc5aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-02f43ea9aa9dbc5aa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:462397577780:route-table/rtb-02f43ea9aa9dbc5aa",
            "id": "rtb-02f43ea9aa9dbc5aa",
            "owner_id": "462397577780",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059a913431981bc66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dbc9c0bbc239d47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "id": "rtb-02f43ea9aa9dbc5aa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dc7810565b210f3",
            "region": "ap-south-1",
            "route_table_id": "rtb-02f43ea9aa9dbc5aa",
            "subnet_id": "subnet-0d4fab59c3c2ce0cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:462397577780:security-group/sg-0947ef0d845dad549",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0947ef0d845dad549",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "462397577780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dbc9c0bbc239d47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "id": "sg-0947ef0d845dad549",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:462397577780:subnet/subnet-0d4fab59c3c2ce0cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4fab59c3c2ce0cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462397577780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-03dbc9c0bbc239d47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "id": "subnet-0d4fab59c3c2ce0cd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:462397577780:vpc/vpc-03dbc9c0bbc239d47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0420c778b0042a174",
            "default_route_table_id": "rtb-04b0438c5ac7e7eef",
            "default_security_group_id": "sg-0191055099b3404b9",
            "dhcp_options_id": "dopt-09c60cf6614824a68",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dbc9c0bbc239d47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b0438c5ac7e7eef",
            "owner_id": "462397577780",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "462397577780",
            "id": "vpc-03dbc9c0bbc239d47",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}